test/parsing/precedence/new-c-q-q.chpl

var x = new object()??;
compilerError(x.type:string);
